#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(dmUtils, 0.1, chendaming1950@gmail.com)
AC_CONFIG_SRCDIR([src/dmUtils/dm_timer.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(dmUtils,1.0)

# Checks for programs.
AC_PROG_CC
AC_PATH_PROG(AR, ar)
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_rwlock_init])
AC_CHECK_LIB([rt], [sem_init])
AC_CHECK_LIB(m, sqrt)
AC_CHECK_LIB(dl,dlopen)

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([gettimeofday inet_ntoa localtime_r memset select socket strchr strtol])

AC_OUTPUT([Makefile src/dmUtils/Makefile test/Makefile])
